fix : 유저 프로필 조회 수정, userboard 조회 수정, 모임 가입/승인/거절 시 중복 쿼리 문제 해결, 참가신청자 목록 조회 불가 문제 해결

--- a/src/main/resources/templates/kakaoMap.html
+++ b/src/main/resources/templates/kakaoMap.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>위치 지정하기</title>
+  <title>모임 생성</title>
   <script th:src="'https://dapi.kakao.com/v2/maps/sdk.js?appkey=' + ${kakaoMapAppKey} + '&libraries=services'"></script>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
