--- a/src/main/resources/templates/meets.html
+++ b/src/main/resources/templates/meets.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Event Details</title>
+    <title>모임</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <style>
@@ -50,8 +50,7 @@
     </div>
     <div class="mb-6">
         <label class="block text-gray-700">모임설명</label>
-        <textarea id="content" class="w-full p-2 border border-gray-300 rounded" rows="4"
-                  disabled>나의 챌린지 찍는 길 같이 가실 분</textarea>
+        <textarea id="content" class="w-full p-2 border border-gray-300 rounded" rows="4" disabled>나의 챌린지 찍는 길 같이 가실 분</textarea>
     </div>
     <div class="flex justify-between items-center mb-6">
         <button id="InvitationList" class="bg-red-500 text-white px-4 py-2 rounded">참가 신청자 목록</button>
@@ -88,6 +87,7 @@
     // URL에서 meetId 가져오기
     const path = window.location.pathname;
     const meetId = path.split('/').pop();  // 마지막 경로 부분을 meetId로 추출
+    const curUserId = localStorage.getItem('userId');
 
     if (!meetId) {
         alert('모임 ID가 필요합니다.');
@@ -99,7 +99,7 @@
     });
     document.getElementById('InvitationList').addEventListener('click', async () => {
 
-        window.open(`/InvitationList.html?meetId=${meetId}`, '신청 목록', `width=800,height=600,top=${(screen.height - 600) / 2},left=${(screen.width - 800) / 2}`);
+        window.open(`/public/InvitationList?meetId=${meetId}&userId=${curUserId}`, '신청 목록', `width=800,height=600,top=${(screen.height - 600) / 2},left=${(screen.width - 800) / 2}`);
     });
 
     document.getElementById('participant').addEventListener('click', async function () {
@@ -132,7 +132,6 @@
             return;
         }
 
-
         async function fetchMeetDetails() { // meet 하나 조회
             try {
                 const response = await fetchWithAuth(`/api/meets/${meetId}`, { //컨트롤러,Dto 수정
@@ -153,14 +152,13 @@
 
         function displayMeetData(resData) {
             document.getElementById('meets-container').classList.remove('hidden');
-            //           document.getElementById('profile-image').src = resData.creatorProfilePhoto || 'https://source.unsplash.com/random/100x100';
             document.getElementById('profile-image').src = resData.image;
             document.getElementById('meets-date').innerText = new Date(resData.createdAt).toLocaleDateString();
-            document.getElementById('member-count').value = `${resData.memberCount}명`;
+            document.getElementById('member-count').value = `${resData.memberCount} / ${resData.maxMemberCount}명`;
             document.getElementById('position').value = resData.position || '위치 정보 없음';
             document.getElementById('title').value = resData.title;
             document.getElementById('content').value = resData.content;
-            document.getElementById('bigTitle').value = resData.title;
+            document.getElementById('bigTitle').innerText = resData.title;
             document.getElementById('groupMaster').value = resData.groupCreator;
             console.log("resData.groupCreatorId", resData.groupCreatorId)
             checkIfGroupMaster(resData.groupCreatorId);
