--- a/src/main/resources/templates/profileCollection.html
+++ b/src/main/resources/templates/profileCollection.html
@@ -3,7 +3,7 @@
   <script src="/js/auth.js" defer></script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Profile Collection</title>
+  <title>오늘의 동친</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;700&display=swap" rel="stylesheet">
   <style>
