fix : 모임 신청자 조회 문제 수정

--- a/src/main/resources/templates/InvitationList.html
+++ b/src/main/resources/templates/InvitationList.html
@@ -29,10 +29,6 @@
   </div>
 </div>
 
-<script th:inline="javascript">
-  const profileId = [[${profileId}]];
-</script>
-
 <script>
   const accessToken = localStorage.getItem('Authorization');
   document.addEventListener('DOMContentLoaded', function () {
@@ -56,7 +52,7 @@
         const data = responseData.data;
 
         data.forEach(item => {
-          fetch(`/profiles/${profileId}`, {
+          fetch(`/profiles/${item.userId}`, {
             method: 'GET',
             headers: {
               'Authorization': accessToken,
