--- a/src/main/resources/templates/profileCollection.html
+++ b/src/main/resources/templates/profileCollection.html
@@ -74,8 +74,7 @@
         `;
 
         profileCard.addEventListener('click', function() {
-          const profileId = profileCard.dataset.profileId;
-          window.location.href = `/public/Profile?profileId=${profileId}`;
+          window.location.href = `/public/Profile?profileUsername=${profile.name}`;
         });
 
         profilesContainer.appendChild(profileCard);
