fix : 프로필 nickname으로 조회

--- a/src/main/resources/templates/profileCollection.html
+++ b/src/main/resources/templates/profileCollection.html
@@ -74,7 +74,7 @@
         `;
 
         profileCard.addEventListener('click', function() {
-          window.location.href = `/public/Profile?profileUsername=${profile.name}`;
+          window.location.href = `/public/Profile?nickname=${profile.nickname}`;
         });
 
         profilesContainer.appendChild(profileCard);
