add : 모임 참가자 조회 및 강퇴 기능 추가

--- a/src/main/resources/templates/InvitationList.html
+++ b/src/main/resources/templates/InvitationList.html
@@ -164,6 +164,9 @@
   });
   // 닫기 버튼
   document.getElementById('closeButton').addEventListener('click', function () {
+    if (window.opener) {
+      window.opener.location.reload();
+    }
     window.close(); // 팝업 창 닫기
   });
 </script>
