--- a/src/main/resources/templates/meets.html
+++ b/src/main/resources/templates/meets.html
@@ -53,9 +53,10 @@
         <textarea id="content" class="w-full p-2 border border-gray-300 rounded" rows="4" disabled>나의 챌린지 찍는 길 같이 가실 분</textarea>
     </div>
     <div class="flex justify-between items-center mb-6">
-        <button id="InvitationList" class="bg-red-500 text-white px-4 py-2 rounded">참가 신청자 목록</button>
+        <button id="InvitationList" class="bg-red-500 text-white px-4 py-2 rounded mr-2">참가 신청자 목록</button>
+        <button id="GroupParticipants" class="bg-green-500 text-white px-4 py-2 rounded">모임 참가자</button>
         <div>
-            <button id="participant" class="bg-gray-200 text-gray-700 px-4 py-2 rounded">참가신청</button>
+            <button id="participant" class="bg-gray-200 text-gray-700 px-4 py-2 rounded mr-2">참가신청</button>
             <button id="closeButton" class="bg-gray-200 text-gray-700 px-4 py-2 rounded">닫기</button>
         </div>
     </div>
@@ -94,6 +95,9 @@
     }
 
     document.getElementById('closeButton').addEventListener('click', function () {
+        if (window.opener) {
+            window.opener.location.reload();
+        }
         window.close(); // 팝업 창 닫기
     });
     document.getElementById('InvitationList').addEventListener('click', async () => {
@@ -268,6 +272,9 @@
             const data = await response.json();
             if (data.message === '그룹을 삭제하였습니다.') {
                 alert('모임이 성공적으로 삭제되었습니다.');
+                if (window.opener) {
+                    window.opener.location.reload();
+                }
                 window.close();
             }
         }
@@ -308,6 +315,10 @@
             // 좋아요 수를 업데이트
             likeCountElement.innerText = likesCount;
         }
+    });
+
+    document.getElementById('GroupParticipants').addEventListener('click', async () => {
+        window.open(`/public/GroupParticipants?meetId=${meetId}`, '모임 참여 인원', `width=800,height=600,top=${(screen.height - 600) / 2},left=${(screen.width - 800) / 2}`);
     });
 
 
